Addeed Closed Caption URL.

--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
 			</select>
 
 			<a class="btn btn-primary" ng-click="refresh()">Refresh</a>
+			<p>Caption URL: {{currentClosedCaption}}</p>
+			
 		</div>
 
 		<div class="hero-unit">
 
-			<a id="player" style="display:block;width:520px;height:330px"></a>
+			<a id="player" style="display:block;width:768px;height:431px"></a>
 
 		</div>
 	</body>
