Added features to the flowplayer.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>myPrime Video Test Utility</title>
 
-		<link rel="stylesheet" rel="stylesheet" href="bootstrap/css/bootstrap.css">
+		<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 
 		<style type="text/css">
 			body {
